--- a/tasks/register-one-runner.yml
+++ b/tasks/register-one-runner.yml
@@ -22,7 +22,7 @@
     _env: "{% for e in _config.env|default([]) %} --env '{{e}}'{% endfor %}"
 
 - name: Check if runner already registered
-  shell: gitlab-ci-multi-runner list 2>&1 | egrep '^{{_config.name}}\s+'
+  shell: gitlab-ci-multi-runner list 2>&1 | sed -E 's/\s+?\x1B/|/g' | cut -d'|' -f1 | grep -x '{{_config.name}}'
   failed_when: false
   changed_when: false
   register: check_if_registered_result
