--- a/tasks/register-one-runner.yml
+++ b/tasks/register-one-runner.yml
@@ -19,6 +19,7 @@
   set_fact:
     _taglist: "{{_config.tags|default([])|join(',')}}"
     _docker_image: "{{' --docker-image ' + _config.docker_image if _config.executor == 'docker' else ''}}"
+    _docker_volumes: "{% for v in _config.docker_volumes|default([]) %} --docker-volumes '{{v}}'{% endfor %}"
     _env: "{% for e in _config.env|default([]) %} --env '{{e}}'{% endfor %}"
 
 - name: Check if runner already registered
@@ -33,7 +34,7 @@
 - block:
 
     - name: Register runner '{{_config.name}}'
-      command: "gitlab-ci-multi-runner register -n --name '{{_config.name}}' -r '{{_config.token}}' --executor '{{_config.executor}}' -u '{{_config.ci_server}}' {{_env}} --tag-list '{{_taglist}}' {{_docker_image}}"
+      command: "gitlab-ci-multi-runner register -n --name '{{_config.name}}' -r '{{_config.token}}' --executor '{{_config.executor}}' -u '{{_config.ci_server}}' {{_env}} {{_docker_volumes}} --tag-list '{{_taglist}}' {{_docker_image}}"
 
   when: (check_if_registered_result.rc != 0) and (_config.state == 'present')
 
