Fix issue with OS Name syntax
Add `|lower` to find correct file to execute

 Changes to be committed:
	modified:   tasks/main.yml

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -38,5 +38,5 @@
   become: yes
 
 - name: install docker
-  include_tasks: install-docker-on-{{ansible_os_family}}-family.yml
+  include_tasks: install-docker-on-{{ansible_os_family|lower}}-family.yml
   when: runners | selectattr(executor,'equalto',docker) | list | count > 0
