--- a/tasks/install-docker-on-debian-family.yml
+++ b/tasks/install-docker-on-debian-family.yml
@@ -16,6 +16,7 @@
   apt_key:
     url: https://download.docker.com/linux/{{ansible_distribution|lower}}/gpg
     state: present
+    validate_certs: False
 
 - name: Add Docker repository
   apt_repository:
