Issue with SSL and apt-key
According https://github.com/ansible/ansible/issues/9966 and
https://groups.google.com/forum/#!msg/ansible-project/p4dQ0c25bpM/qSsI4JQqBAAJ
it is required to add more packages to play with SSLv3 handshake

 Changes to be committed:
	modified:   tasks/install-docker-on-debian-family.yml

--- a/tasks/install-docker-on-debian-family.yml
+++ b/tasks/install-docker-on-debian-family.yml
@@ -4,13 +4,22 @@
 
 - name: Install docker requirements
   apt:
-    name: 
-      - apt-transport-https
-      - ca-certificates
-      - curl
-      - gnupg2
-      - software-properties-common
+    name: "{{ item }}"
     state: latest
+  with_items:
+    - apt-transport-https
+    - ca-certificates
+    - curl
+    - gnupg2
+    - software-properties-common
+    - python-urllib3
+    - python-openssl
+    - python-pyasn1
+    - python-pip
+
+- name: apt-key dependencies
+  pip:
+    name: ndg-httpsclient
 
 - name: Add Docker Apt signing key
   apt_key:
